# xlsx_rich_text

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
src/xlsx_rich_text/: ooxml_ns.py  workbook.py  xml.py
src/xlsx_rich_text.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xlsx_rich_text/cell/: cell.py  datacell.py  paragraph.py  richtext.py  run.py
src/xlsx_rich_text/helpers/: attrib.py  xl_position.py
src/xlsx_rich_text/sheets/: datasheet.py  newdatasheet.py  record.py  shared_strings.py  sheet.py  sheet_copy.py  sheets.py
src/xlsx_rich_text/styles/: implied_numfmts.py  style.py  styles.py
